--- a/resources/css/stylesheet01.css
+++ b/resources/css/stylesheet01.css
@@ -4145,7 +4145,8 @@ tbody.collapse.in {
 	content: "";
 	border-top: 0;
 	border-bottom: 4px dashed;
-	border-bottom: 4px solid\9
+	border-bottom: 4px solid\9
+
 }
 
 .dropup .dropdown-menu, .navbar-fixed-bottom .dropdown .dropdown-menu {
@@ -8220,4 +8221,13 @@ button.close {
 	.hidden-print {
 		display: none !important
 	}
+}
+
+#jumbotronStartseite{
+	background-image: url("../img/tabletry.png");
+	background-size: cover;
+}
+.card-img-top{
+	height: 450px;
+	width: content-box;
 }
