--- a/resources/css/stylesheet01.css
+++ b/resources/css/stylesheet01.css
@@ -34,6 +34,9 @@ button {
 .button:focus {
 	background-color: #23D5DE;
 }
+.select{
+	padding: 30px;
+}
 .switch {
   position: relative;
   display: inline-block;
@@ -47,7 +50,6 @@ button {
   width: 0;
   height: 0;
 }
-
 .slider {
   position: absolute;
   cursor: pointer;
@@ -184,7 +186,7 @@ input[type=submit]:hover {
 }
 
 .container {
-  border-radius: 5px;
+  border-radius: 20px;
   background-color: #f2f2f2;
   padding: 20px;
 }
