überflüssige css dateien gelöscht

--- a/resources/css/stylesheet01.css
+++ b/resources/css/stylesheet01.css
@@ -1,5 +1,5 @@
 body {
-	margin: 50px;
+	margin: 3%;
 	background-color: #7F6E64;
 }
 
@@ -2339,7 +2339,7 @@ pre code {
 	margin-left: auto
 }
 
-.row {
+.restrow {
 	margin-left: 12%;
 }
 
@@ -2353,8 +2353,6 @@ pre code {
 	.col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
 	position: relative;
 	min-height: 1px;
-	padding-right: 15px;
-	padding-left: 15px
 }
 
 .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3,
