--- a/resources/css/stylesheet01.css
+++ b/resources/css/stylesheet01.css
@@ -284,6 +284,14 @@ button {
 	}
 }
 
+@media screen and (max-width: 900px){
+   .card-img-top-index{
+      height: 200px;
+      width: 100%;
+   }
+}
+
+
 #titletext {
 	color: #ffffff;
 }
